# agent-wiki

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  conftest.py  install.sh  pyproject.toml
.claude/: settings.json
.github/workflows/: release.yml  test.yml
scripts/: wiki.py
src/: config.rs  git.rs  lib.rs  logs.rs  main.rs  metadata.rs  paths.rs  root.rs  schema.rs
src/commands/: clear_flags.rs  detect_drift.rs  eject.rs  hook_setup.rs  init.rs  mod.rs  pull.rs  push.rs  status.rs
templates/: WIKI_UPDATE.md  llm.md  wiki-instructions.md
tests/: conftest.py  test_e2e.py  test_e2e.rs  test_eject.py  test_eject.rs  test_executable.py  test_flags.py  test_hooks.py  test_init.py  test_init.rs  test_metadata.py  test_pull.py  test_pull.rs  test_push.py  test_push.rs  test_tracking.py  test_tracking.rs  utils.py
tests/common/: mod.rs
wiki/: __init__.py  check_paths.py  cli.py  detect_drift.py  eject.py  hook_setup.py  init.py  lib.py  merge.py  status.py  validate.py
wiki/templates/: AGENT.template.md  WIKI_MERGE.md  WIKI_UPDATE.md  instructions.md  llm.md  wiki-instructions.md
