[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-wiki"
version = "0.2.0"
description = "Documentation wiki manager for LLM agents — manages AGENTS.md, CLAUDE.md, and similar per-directory instruction files"
requires-python = ">=3.11"

[project.scripts]
agent-wiki = "wiki.cli:main"

[project.optional-dependencies]
build = ["pyinstaller"]

[tool.setuptools.packages.find]
include = ["wiki*"]

[tool.setuptools.package-data]
"wiki" = ["templates/*.md"]
